# owl-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: package.json
src/: cli.rs  config.rs  handler.rs  main.rs  pitfalls.rs  quality.rs  sparql.rs  tools.rs
src/ontology/: manager.rs  mod.rs  owl_api.rs  watcher.rs
