[package]
name = "owl-mcp"
version = "1.0.0"
edition = "2021"
description = "High-performance MCP server for OWL ontology management, written in Rust"
authors = ["Antonio Zaitoun <antonio@zaitoun.dev>"]
license = "MIT"
repository = "https://github.com/Minitour/owl-mcp"
homepage = "https://github.com/Minitour/owl-mcp"

[[bin]]
name = "owl-mcp"
path = "src/main.rs"

[dependencies]
rust-mcp-sdk = { version = "0.8", default-features = false, features = [
    "server",
    "macros",
    "stdio",
    "hyper-server",
    "streamable-http",
    "sse",
] }
horned-owl = "1.4"
curie = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
regex = "1"
dirs = "5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
